# cc-switch

./: .gitignore  CHANGELOG.md  Cargo.toml  cli_err.txt  pacetrae  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_codex.rs  vite.config.ts
.cargo/: config.toml
crates/cc-switch-cli/: Cargo.toml
crates/cc-switch-cli/src/: main.rs
crates/cc-switch-cli/tests/: cli_p0_fixes.rs  cli_plan_d.rs  plan_c_auth.rs
crates/cc-switch-core/: Cargo.toml
crates/cc-switch-core/src/: app_handle_stub.rs  app_store.rs  codex_oauth.rs  config.rs  copilot_auth.rs  event_callback.rs  lib.rs  provider.rs  store.rs  tauri_compat.rs  tray.rs  usage_events.rs
crates/cc-switch-tauri-commands/: Cargo.toml
crates/cc-switch-tauri-commands/src/: app_store.rs  auto_launch.rs  lib.rs
crates/cc-switch-tauri-commands/src/commands/: auth.rs  balance.rs  codex_oauth.rs  coding_plan.rs  config.rs  copilot.rs  deeplink.rs  env.rs  failover.rs  global_proxy.rs  hermes.rs  import_export.rs  keychain.rs  mcp.rs  misc.rs  mod.rs  model_fetch.rs  omo.rs  openclaw.rs  plugin.rs  profile.rs  prompt.rs  provider.rs  proxy.rs  s3_sync.rs  session_manager.rs  settings.rs  skill.rs  stream_check.rs  subscription.rs  sync_support.rs  usage.rs  webdav_sync.rs  workspace.rs
deploy/: cc-switch.service  config.example.yaml
docs/: cli-feature-implementation-assessment.md  cli-reference-manual.md  headless-cli-enhancement-plan.md  plan-audit-report-2026-06-15.md
docs/release-notes/: v3.17.0-en.md  v3.17.0-ja.md  v3.17.0-zh.md
docs/superpowers/audit-reports/: 2026-07-05-comprehensive-cli-audit.md
docs/superpowers/plans/: 2026-05-14-cc-switch-enhancements.md  2026-06-13-multi-protocol-cli-support.md  2026-07-04-plan-a-p0-fixes.md  2026-07-04-plan-b-architecture-refactor.md  2026-07-04-plan-c-new-features.md  2026-07-04-plan-d-experience-improvements.md  api_mode_extension_plan.md
docs/superpowers/specs/: 2026-07-04-cli-feature-review-design.md
docs/user-manual/: README.md
docs/user-manual/en/: cli-deployment-guide.md  headless-cli-guide.md
docs/user-manual/ja/: cli-deployment-guide.md  headless-cli-guide.md
docs/user-manual/zh/: cli-deployment-guide.md  headless-cli-guide.md
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  provider.rs  store.rs  tray.rs
src-tauri/src/commands/: config.rs  failover.rs  import_export.rs  keychain.rs  mcp.rs  mod.rs  provider.rs  settings.rs
src-tauri/src/core/: bootstrap.rs  database.rs  decl_config.rs  mod.rs  provider_manager.rs
src-tauri/src/database/: backup.rs
src-tauri/src/mcp/: validation.rs
src-tauri/src/proxy/: circuit_breaker.rs  failover_switch.rs  handlers.rs  mod.rs  server.rs
src-tauri/src/services/: config.rs  env_manager.rs  s3_auto_sync.rs  skill.rs  subscription.rs  webdav_auto_sync.rs
src-tauri/tests/: mcp_commands.rs  profile_roundtrip.rs  provider_service.rs
src/components/: ErrorBoundary.tsx  JsonEditor.tsx  MarkdownEditor.tsx  UsageScriptModal.tsx
src/components/mcp/: McpConnectionTest.tsx  McpFormModal.tsx  McpTestResultDialog.tsx  UnifiedMcpPanel.tsx
src/components/profiles/: ProfileManageDialog.tsx  ProfileSwitcher.tsx
src/components/proxy/: CircuitBreakerStatusPanel.tsx  FailoverLogPanel.tsx  ProxyPanel.tsx
src/components/sessions/: SessionExportDialog.tsx  SessionManagerPage.tsx
src/components/settings/: KeyboardShortcutsSettings.tsx  NotificationSettings.tsx  SettingsPage.tsx
src/components/usage/: BudgetAlertSettings.tsx  (+4 more)
src/config/: claudeDesktopProviderPresets.ts  claudeProviderPresets.ts  codexProviderPresets.ts  geminiProviderPresets.ts  hermesProviderPresets.ts  openclawProviderPresets.ts  opencodeProviderPresets.ts
src/hooks/: useAppEvents.ts  useAppRouter.ts  useCircuitBreakerStatus.ts  useCostEstimation.ts  useFailoverLog.ts  useKeyboardShortcuts.ts  useMcp.ts  useMcpConnectionTest.ts  useProviderActions.ts  useSettings.ts  useSystemNotification.ts  useSystemNotifications.ts  useUsageBudget.ts  useWindowControls.ts
src/i18n/: index.ts
src/lib/: router.tsx
src/types/: budget.ts  failover.ts  mcp.ts  notification.ts  omo.ts
src/utils/: providerConfigUtils.ts
tests/components/: CircuitBreakerStatusPanel.test.tsx  McpConnectionTest.test.tsx  SessionExportDialog.test.tsx
tests/hooks/: useAppEvents.test.tsx  useAppRouter.test.tsx  useCircuitBreakerStatus.test.tsx  useProviderActions.test.tsx  useWindowControls.test.tsx
tests/utils/: omoConfig.test.ts
(+86 files in other folders)
