[package]
name = "cc-switch-cli"
version = "3.16.5"
edition = "2021"
rust-version = "1.85.0"
description = "CC Switch 命令行管理工具（无 Tauri 依赖）"
license = "MIT"

[[bin]]
name = "cc-switch-cli"
path = "src/main.rs"

[dependencies]
cc-switch-core = { path = "../cc-switch-core" }
clap = { version = "4.5", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
url = "2.5"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "socks"] }
rustls = "0.23"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
