[package]
name = "cc-switch-tauri-commands"
version = "3.16.5"
edition = "2021"
rust-version = "1.85.0"
description = "CC Switch Tauri 命令包装层"
license = "MIT"

[lib]
name = "cc_switch_tauri_commands"
crate-type = ["rlib"]
doctest = false

[dependencies]
cc-switch-core = { path = "../cc-switch-core" }
tauri = { version = "2.8.2", features = ["tray-icon", "protocol-asset", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "socks"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
thiserror = "2.0"
anyhow = "1.0"
base64 = "0.22"
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
toml = "0.8"
toml_edit = "0.22"
rquickjs = { version = "0.8", features = ["array-buffer", "classes"] }
